# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  11 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  We don't need to do the device building twice, so removing USE=build from
  first baselayout install.

  09 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh:
  We check for a plugdev group, add it if it doesn't exist, and make sure any
  users specified by livecd/users is in the group.

  09 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/mips.py:
  Changing cobalt_n32 to use mipsel4_n32 as its inheritance point. Thanks to
  Stuart Longland <redhatter@gentoo.org> for pointing this change out.

  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/catalyst_support.py:
  Fix up calc_contents in contents_map. Thanks to Brent Baude
  <ranger@gentoo.org> for pointing it out. This is catalyst 2.0.6_pre3 for
  testing.

  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Ensure /etc/xml/catalog does not exist in stage1, since it will always be
  empty and will cause issues in stage3 and beyond.

  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/kmerge.sh, targets/support/rc-update.sh:
  Changed some of the rc-update code so it should work with baselayout-2,
  also. This is 2.0.6_pre2 for testing.

  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, catalyst,
  files/catalyst.conf, modules/catalyst_support.py,
  modules/generic_stage_target.py, modules/grp_target.py,
  modules/snapshot_target.py:
  Added support for generating CONTENTS files automatically. Patch by Robin
  Johnson <robbat2@gentoo.org> for bug #207862.

  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/snapshot_target.py:
  Add a patch from Robin Johnson <robbat2@gentoo.org> from bug #207860 to
  exclude digest-* files from the snapshot.
